--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     
-    <title>Odin Recipes
+    <title>Odin Recipes</title>
 
-    </title>
 </head>
 <body>
 
-<h1>Odin Recipes</h1>
+<h1><u>Odin Recipes</u></h1>
 
 
+
+<ul>
+    <li><a href="recipes/Lomo.html">Lomo Saltado</a></li>
+    <hr>
+    <li><a href="recipes/PolloGuisado.html">Pollo Guisado</a></li>
+    <hr>
+    <li><a href="recipes/SslmonBites.html">Salmon Bites </a></li>
+  </ul>
 
 
     
